--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      property="og:description"
+      content="Superluminal - Peace, Love, & Psytrance"
+    />
+    <meta 
+      name="url"
+      property="og:url""
+      content="https://static.wixstatic.com/media/1d469b_3bedb45162264b3598e6d9a9d90e4e2e~mv2.png/v1/fill/w_1230,h_680,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01,enc_auto/1d469b_3bedb45162264b3598e6d9a9d90e4e2e~mv2.png"
     />
     <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
