--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,6 +32,8 @@
     name="image"
     property="og:image"
     content="https://superluminalpsy.com/images/SL_banner.png"
+    og:image:width="500px"
+    og:image:height="150px"
     />
     <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
