meta tages again

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,7 +31,7 @@
     <meta
     name="image"
     property="og:image"
-    content="https://superluminalpsy.com/images/SL_banner.png"
+    content="https://superluminalpsy.com/images/SL-banner.jpg"
     og:image:width="500px"
     og:image:height="150px"
     />
