--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
       gtag('js', new Date());
       gtag('config', 'G-H8N9H2Y3WG');
     </script>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="http://superluminalpsy.com/faviconSL.ico" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap"
